--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,20 @@ body {
   padding: 0;
 }
 
+.board {
+  display: grid;
+  grid-template-columns: repeat(3, 100px);
+  grid-template-rows: repeat(3, 100px);
+  gap: 5px;
+}
+
+.board button {
+  width: 100%;
+  height: 100%;
+  font-size: 24px;
+}
+
+
 .square {
   background: #fff;
   border: 1px solid #999;
